Fix the overflow in chrome/safari

--- a/views/website.sass
+++ b/views/website.sass
@@ -57,7 +57,7 @@ nav ul
 
   a
     color: #fff
-    padding: 4px
+    padding: 3px 4px
     text-decoration: none
     text-transform: lowercase
     font-size: 14px
